--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
+certifi==2020.4.5.1
+chardet==3.0.4
 Django==1.11.28
+idna==2.9
 pytz==2019.3
+qcloudsms-py==0.1.4
+redis==3.4.1
+requests==2.23.0
+urllib3==1.25.8
